--- a/Fuji-I/appsettings.json
+++ b/Fuji-I/appsettings.json
@@ -1,3 +1,39 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "Serilog": {
+//    "MinimumLevel": "Information",
+//    "WriteTo": [
+//      {
+//        "Name": "Console"
+//      },
+//      {
+//        "Name": "Debug"
+//      },
+//      {
+//        "Name": "File",
+//        "Args": {
+//          "path": "\\\\192.168.1.181\\sap_xmls\\myapp-.txt",
+//          "rollingInterval": "Day",
+//          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+//        }
+//      }
+//    ]
+//  },
+//  "AppSettings": {
+//    "FilePath1": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line1.csv",
+//    "FilePath2": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line2.csv",
+//    "FilePath3": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line3.csv"
+//  }
+//}
+
+
+
 {
   "Logging": {
     "LogLevel": {
@@ -5,5 +41,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //"Serilog": {
+  //  "MinimumLevel": "Information", // Minimum log level for Serilog
+  //  "WriteTo": [
+  //    {
+  //      "Name": "Console" // Write logs to the console
+  //    },
+  //    {
+  //      "Name": "Debug" // Write logs to debug output
+  //    },
+  //    {
+  //      "Name": "File", // Write logs to a file
+  //      "Args": {
+  //        "path": "\\\\192.168.1.181\\sap_xmls\\myapp-.txt",
+  //        "rollingInterval": "Day", // Roll log file daily
+  //        "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}" // Format of log entries
+  //      }
+  //    }
+  //  ]
+  //},
+  "AppSettings": {
+    "FilePath1": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line1.csv",
+    "FilePath2": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line2.csv",
+    "FilePath3": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line3.csv",
+    "FilePath4": "\\\\192.168.1.181\\sap_xmls\\LineReport\\"
+  }
 }
