db connection & Prod_input changes

--- a/Fuji-I/appsettings.json
+++ b/Fuji-I/appsettings.json
@@ -61,6 +61,10 @@
   //    }
   //  ]
   //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.1.183;Database=B1;User Id=bh;Password=barath@2024;MultipleActiveResultSets=true"
+  },
+
   "AppSettings": {
     "FilePath1": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line1.csv",
     "FilePath2": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line2.csv",
