Added login page

--- a/Fuji-I/appsettings.json
+++ b/Fuji-I/appsettings.json
@@ -62,7 +62,7 @@
   //  ]
   //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.183;Database=B1;User Id=bh;Password=barath@2024;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.1.183;Database=B1;User Id=bh;Password=barath@2024;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
 
   "AppSettings": {
