Hourly Report Page Added

--- a/Fuji-I/appsettings.json
+++ b/Fuji-I/appsettings.json
@@ -61,9 +61,9 @@
   //    }
   //  ]
   //},
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.183;Database=B1;User Id=bh;Password=barath@2024;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=192.168.1.146;Database=Digitalization;User Id=sa;Password=syrma@123;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    },
 
   "AppSettings": {
     "FilePath1": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line1.csv",
