--- a/Fuji-I/Fuji-I.csproj
+++ b/Fuji-I/Fuji-I.csproj
@@ -8,7 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Prod_Data\**" />
+    <Content Remove="Views\Prod_Data\**" />
+    <EmbeddedResource Remove="Views\Prod_Data\**" />
+    <None Remove="Views\Prod_Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Data\ApplicationDbContext .cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Views\ProdData\ProductionData.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,7 +37,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="NLog" Version="5.3.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
