online file  style and css files change to offline

--- a/Fuji-I/appsettings.json
+++ b/Fuji-I/appsettings.json
@@ -61,10 +61,11 @@
   //    }
   //  ]
   //},
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.146;Database=Digitalization;User Id=sa;Password=syrma@123;MultipleActiveResultSets=true;TrustServerCertificate=true",
-    "ProdDataConnection": "Server=192.168.1.181;Database=SFCS;User Id=sa;Password=Syrma@2022;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=192.168.1.146;Database=Digitalization;User Id=sa;Password=syrma@123;MultipleActiveResultSets=true;TrustServerCertificate=true",
+        "ProdDataConnection": "Server=192.168.1.181;Database=SFCS;User Id=sa;Password=Syrma@2022;MultipleActiveResultSets=true;TrustServerCertificate=true",
+        "TestConnection": "Server=SSTLCHDES-398\\SQLEXPRESS;Initial Catalog=Digitalization;Integrated Security=True;TrustServerCertificate=True"
+    },
 
   "AppSettings": {
     "FilePath1": "\\\\192.168.1.181\\sap_xmls\\LineReport\\CSV FILE for ActionReport(202407060001-202407062359)_Line1.csv",
